Functionality for both Direct and Group assignment roles

--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,9 +8,47 @@
   </head>
   <body>
     <h2>Select Roles to Activate</h2>
-    <form id="roleForm">
-      <!-- Roles will be injected here -->
+    <form id="roleFormDirectRoles">
+      Roles will be injected here -->
+<!-- </form>
+    <form id="roleFormGroupRoles">
+    
     </form>
+    <button id="activateRolesBtn" type="button">Activate Roles</button>
+    <button id="generateRolesBtn" type="button">Generate Roles</button>
+    <div id="info">
+      <h1 id="signature">By Damen Savvi</h1>
+      <h1 id="website">
+        <a
+          href="https://www.damensavvi.software"
+          target="_blank"
+          style="color: blue"
+          >www.damensavvi.software</a
+        >
+      </h1>
+    </div>
+    <script src="popup.js"></script>
+  </body>
+</html>  -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Azure Role Activation</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h2 style="font-size: 20px; text-decoration: underline">
+      Select Roles to Activate
+    </h2>
+    <div id="roleFormDirectRoles">
+      <!-- Direct roles checkboxes will be injected here -->
+    </div>
+    <div id="roleFormGroupRoles">
+      <!-- Group roles checkboxes will be injected here -->
+    </div>
     <button id="activateRolesBtn" type="button">Activate Roles</button>
     <button id="generateRolesBtn" type="button">Generate Roles</button>
     <div id="info">
